<resources>
    <string name="app_name">Messages</string>
    <string name="languages">Languages</string>
    <string name="next">Next</string>
    <string name="messages">Messages</string>
    <string name="messges">Messages</string>
    <string name="calls">Calls</string>
    <string name="new_conversation">New Conversation</string>
    <string name="compose_message">Compose message UI will be implemented here</string>
    <string name="set_default_sms">Set Default SMS App</string>
    <string name="private_conversations">Private Conversations</string>
    <string name="spam_block">Spam &amp; Block</string>
    <string name="custom_blocking">Custom Blocking</string>
    <string name="personalize">Personalize</string>
    <string name="themecheck">Theme</string>
    <string name="title_font">Font &amp; Size</string>
    <string name="bubble">Bubble</string>
    <string name="ringtone">Ringtone</string>
    <string name="more">More</string>
    <string name="classic">Classics</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_green">Green</string>
    <string name="theme_pink">Pink</string>
    <string name="theme_yellow">Yellow</string>
    <string name="theme_oral">Oral</string>
    <string name="theme_navy_blue">Navy Blue</string>
    <string name="theme_cerulean_blue">Cerulean Blue</string>
    <string name="theme_black_blue">Black &amp; Blue</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_teal">Teal</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_red">Red</string>
    <string name="SeasonsSeries">Seasons Series</string>
    <string name="country_series">Country Series</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="winter">Winter</string>
    <string name="china">China</string>
    <string name="egypt">Egypt</string>
    <string name="england">England</string>
    <string name="france">France</string>
    <string name="india">India</string>
    <string name="japan">Japan</string>
    <string name="russia">Russia</string>
    <string name="usa">USA</string>
    <string name="custom_theme">Custom Theme</string>
    <string name="use">Use</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="manage_apps">Manage Apps</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="create_your_pin">Create Your Pin</string>
    <string name="select_security_question">Select security question</string>
    <string name="missed_call">Missed Call</string>
    <string name="no_answer">No Answer</string>
    <string name="call_ended">Call Ended</string>
    <string name="after_call_notification_title">Call Ended</string>
    <string name="after_call_channel_name">Post Call Notifications</string>
    <string name="after_call_channel_description">Notifications shown after a call ends</string>
    <string name="after_call_enable_overlay">Enable overlay</string>
    <string name="unknown_number">Private Number</string>
    <string name="invalid_number">Invalid number</string>
    <string name="call_failed">Failed to make call</string>
    <string name="message_failed">Failed to open message</string>
    <string name="add_contact_failed">Failed to add contact</string>
    <string name="search_messages">Search Messages</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Español</string>
    <string name="german">Deutsch</string>
    <string name="settings_section_general">General</string>
    <string name="settings_section_go_to">Go To</string>
    <string name="settings_section_backups">Backups</string>
    <string name="settings_archive">Archive</string>
    <string name="settings_recycle_bin">Recycle Bin</string>
    <string name="settings_schedule_messages">Schedule Messages</string>
    <string name="settings_caller_settings">Caller Settings</string>
    <string name="settings_starred">Starred</string>
    <string name="settings_swipe_gestures">Swipe Gestures</string>
    <string name="settings_add_signature">Add Signature</string>
    <string name="settings_language">Language</string>
    <string name="settings_advance">Advance</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_share_app">Share App!</string>
    <string name="settings_rate_us">Rate Us</string>
    <string name="settings_export_messages">Export Messages</string>
    <string name="settings_import_messages">Import Messages</string>
    <string name="settings_contacts_colored_icons">Contacts colored icons</string>
    <string name="settings_color_sim_card_icons">Color SIM card icons</string>
    <string name="settings_quick_access_to_otp">Quick access to OTP</string>
    <string name="settings_default_sms_already_set">App is already set as default</string>
    <string name="settings_unable_open_play_store">Unable to open Play Store</string>
    <string name="settings_unable_share_play_store_link">Unable to share Play Store link</string>
    <string name="settings_app_name">#Messages</string>
    <string name="message" translatable="false">Message</string>
    <string name="new_sms" translatable="false">New SMS</string>
    <string name="foreground_notification_conversation" translatable="false">Conversation</string>
    <string name="foreground_notification_new_sms" translatable="false">New SMS</string>
    <string name="foreground_notification_theme" translatable="false">Theme</string>
    <string name="settings_share_app_chooser_title">Share App</string>
    <string name="settings_share_app_message">Check out %1$s on Play Store: https://play.google.com/store/apps/details?id=%2$s</string>
    <string name="settings_error_opening_file_picker">Error opening file picker</string>
    <string name="settings_exporting_messages">Exporting Messages</string>
    <string name="settings_importing_messages">Importing Messages</string>
    <string name="settings_please_wait">Please wait...</string>
    <string name="settings_messages_exported_success">Messages exported successfully</string>
    <string name="settings_failed_export_messages">Failed to export messages</string>
    <string name="settings_failed_import_messages">Failed to import messages</string>
    <string name="settings_no_new_messages_to_import">No new messages to import (all messages already exist)</string>
    <string name="settings_unknown_error">Unknown error</string>
    <string name="settings_error_with_reason">Error: %1$s</string>
    <string name="this_message_does_not_contain_otp">This message does not contain an OTP</string>
    <string name="no_dialer_app_found">No dialer app found</string>
    <string name="unable_to_open_dialer_reason">Unable to open dialer: %1$s</string>
    <string name="unable_to_make_call">Unable to make call</string>
    <string name="no_app_found_to_make_calls">No app found to make calls</string>
    <string name="unable_to_make_call_reason">Unable to make call: %1$s</string>
    <string name="unable_to_open_conversation">Unable to open conversation</string>
    <string name="failed_to_send_message_reason">Failed to send message: %1$s</string>
    <string name="otp_copied">OTP copied: %1$s</string>
    <string name="no_otp_found_in_message">No OTP found in message</string>
    <string name="error_copying_otp">Error copying OTP</string>
    <string name="scheduled_message_sent">Scheduled message sent</string>
    <string name="failed_to_send_scheduled_message">Failed to send scheduled message</string>
    <string name="phone_permission_required_to_make_calls">Phone permission is required to make calls</string>
    <string name="conversation_detail_messages_starred">Messages starred</string>
    <string name="conversation_detail_scheduled_for">Scheduled for %1$s %2$s</string>
    <string name="conversation_detail_select_future_datetime">Please select a future date and time</string>
    <string name="conversation_detail_message_scheduled_success">Message scheduled successfully</string>
    <string name="conversation_detail_no_phone_number">No phone number available</string>
    <string name="conversation_detail_error_creating_image_file">Error creating image file</string>
    <string name="conversation_detail_error_loading_image">Error loading image</string>
    <string name="conversation_detail_contact_card_bullet">&#8226; Contact card</string>
    <string name="conversation_detail_default_contact">Contact</string>
    <string name="conversation_detail_contact_card">Contact card</string>
    <string name="conversation_detail_failed_message_title">Failed Message</string>
    <string name="conversation_detail_error_resending_message">Error resending message</string>
    <string name="conversation_detail_message_deleted">Message deleted</string>
    <string name="main_please_enter_filter_name">Please enter a filter name</string>
    <string name="main_end_date_after_start">End date must be after start date</string>
    <string name="main_add_conversation">Add Conversation</string>
    <string name="main_add_conversation_description">Tap to add conversations to this filter</string>
    <string name="manage_apps_percentage_format">%1$d%%</string>
    <string name="manage_apps_ram_used_format">%1$d%% Used</string>
    <string name="manage_apps_total_apps_format">Total: %1$d</string>
    <string name="manage_apps_stop">Stop</string>
    <string name="manage_apps_stopped">Stopped</string>
    <string name="used">Used</string>
    <string name="managing_apps">Managing Apps</string>
    <string name="manage_apps_result_top">Background apps cleaned</string>
    <string name="invalid_filter">Invalid filter</string>
    <string name="select_conversations">Select Conversations</string>
    <string name="conversations_added_to_private">Conversations added to private</string>
    <string name="conversations_added_to_filter">Conversations added to filter</string>
    <string name="call_type_incoming">Incoming</string>
    <string name="callercad_settings">Settings</string>
    <string name="callercad_theme">Theme</string>
    <string name="callercad_appearance">Appearance</string>
    <string name="callercad_dark_mode">Dark mode</string>
    <string name="callercad_switch_between_dark_and_light">Switch between dark and light</string>
    <string name="callercad_features">Features</string>
    <string name="callercad_customize">Customize</string>
    <string name="callercad_show_reminders_in_notification">Show reminders in notification</string>
    <string name="callercad_quick_message">Quick Message</string>
    <string name="callercad_edit_quick_messages">Edit quick messages</string>
    <string name="callercad_call_information_settings">Call information settings</string>
    <string name="callercad_missed_call">Missed call</string>
    <string name="callercad_caller_missedcalldes">See call information after missed calls</string>
    <string name="callercad_completed_call">Completed call</string>
    <string name="callercad_completedcalldes">See call information after completed calls</string>
    <string name="caller_no_answer">No Answer</string>
    <string name="callercad_noanswerdes">See call information when calls are not answered</string>
    <string name="callercad_unknown_caller">Unknown caller</string>
    <string name="callercad_unknowncallerdes">See call information for unknown callers</string>
    <string name="callercad_extras">Extras</string>
    <string name="callercad_show_call_info_for_contacts">Show call info for contacts</string>
    <string name="callercad_missing_permission">Missing permission</string>
    <string name="callercad_about">About</string>
    <string name="callercad_licenses">Licenses</string>
    <string name="callercad_version">Version</string>
</resources>