<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notificationBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_noti"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/inboxButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_notification_inbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/message"
            android:textColor="#ffffff"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newMessageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_notification_new_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/new_sms"
            android:textColor="#ffffff"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manageAppsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_notification_manage_apps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/manage_apps"
            android:textColor="#ffffff"
            android:textSize="8sp" />
    </LinearLayout>
</LinearLayout>
